<resources>
    <string name="app_name">Kotlin Rick</string>

    <string name="location_details_separator_text">Residents of this location</string>
    <string name="location_details_type_placeholder_text">Type</string>
    <string name="location_details_dimension_placeholder_text">Dimension</string>

    <string name="locations_fragment_query_hint">Search location&#8230;</string>

    <string name="locations_fragment_item_type">Type</string>
    <string name="locations_fragment_item_dimension">Dimension</string>

    <string name="character_details_gender">Gender</string>
    <string name="character_details_status">Status</string>
    <string name="character_details_origin">Origin</string>
    <string name="character_details_last_location">Last Location</string>
    <string name="character_details_description">Description</string>
    <string name="character_details_episodes_placeholder_text">Appeared in the episodes</string>

    <string name="characters_fragment_query_hint">Search character&#8230;</string>

    <string name="characters_fragment_item_status">Status</string>
    <string name="characters_fragment_item_species">Species</string>
    <string name="characters_fragment_item_gender">Gender</string>
    <string name="characters_fragment_item_origin">Origin</string>
    <string name="characters_fragment_item_last_location">Last appearance</string>

    <string name="episodes_fragment_query_hint">Search episode&#8230;</string>

    <string name="episode_details_separator_text">Characters in this episode</string>

    <string name="tab_title_characters">Characters</string>
    <string name="tab_title_episodes">Episodes</string>
    <string name="tab_title_locations">Locations</string>

    <string name="status_unknown">Unknown</string>
    <string name="status_alive">Alive</string>
    <string name="status_dead">Dead</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_unknown">Unknown</string>

    <string name="cheese_ipsum">"On sait depuis longtemps que travailler avec du texte lisible et
        contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page
        elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte.
        Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale,
        et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles
        de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut,
        et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore
        qu'à leur phase de construction. Plusieurs versions sont apparues avec le temps, parfois par accident,
        souvent intentionnellement
        (histoire d'y rajouter de petits clins d'oeil, voire des phrases embarassantes)."</string>

</resources>
