<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_fragment_item_id"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:cardView="http://schemas.android.com/apk/res-auto"
        cardView:cardCornerRadius="13dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#004d40">

            <ImageView
                android:id="@+id/personnage_fragment_item__img"
                android:transitionName="imageCharacter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:background="#2d2d2d"/>

                <TextView
                    android:id="@+id/personnage_fragment_item_name"
                    android:layout_width="wrap_content"
                    android:minWidth="50dp"
                    android:fontFamily="@font/rick_n_morty"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round"
                    android:backgroundTint="@color/colorValidate"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="-15dp"
                    android:textColor="@color/white"
                    android:text="Diablo Verde"
                    android:gravity="center"
                    android:layout_marginBottom="5dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#004d40">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#FF4081"
                    android:textSize="16sp"
                    android:fontFamily="@font/calligraphr_regular"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/characters_fragment_item_status"/>

                <TextView
                    android:id="@+id/personnage_fragment_item_status"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="end"
                    android:textColor="#66bb6a"
                    android:textSize="20sp"
                    android:fontFamily="@font/rick_n_morty"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Dead" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#004d40">

                <TextView
                    android:id="@+id/species_placeholder"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#FF4081"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:fontFamily="@font/calligraphr_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/characters_fragment_item_species"/>

                <TextView
                    android:id="@+id/personnage_fragment_item_species"
                    android:layout_toEndOf="@id/species_placeholder"
                    android:textAlignment="textEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentEnd="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="Demon, Humain"
                    android:textColor="#66bb6a"
                    android:textSize="20sp"
                    android:fontFamily="@font/rick_n_morty" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#004d40">

                <TextView
                    android:textSize="16sp"
                    android:fontFamily="@font/calligraphr_regular"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#FF4081"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/characters_fragment_item_gender"/>

                <TextView
                    android:id="@+id/personnage_fragment_item_gender"
                    android:textSize="20sp"
                    android:fontFamily="@font/rick_n_morty"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="#66bb6a"
                    android:layout_marginBottom="5dp"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Male"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#004d40">

                <TextView
                    android:id="@+id/origin_placeholder"
                    android:textSize="16sp"
                    android:fontFamily="@font/calligraphr_regular"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#FF4081"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/characters_fragment_item_origin"/>

                <TextView
                    android:id="@+id/personnage_fragment_item_origin"
                    android:textSize="20sp"
                    android:fontFamily="@font/rick_n_morty"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="#66bb6a"
                    android:layout_marginBottom="5dp"
                    android:gravity="end"
                    android:layout_toEndOf="@id/origin_placeholder"
                    android:layout_alignParentEnd="true"
                    android:textAlignment="textEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Earth C-137"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/personnage_fragment_item_rl_last_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#004d40">

                <TextView
                    android:id="@+id/last_location_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/characters_fragment_item_last_location"
                    android:textColor="#FF4081"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:fontFamily="@font/calligraphr_regular" />

                <TextView
                    android:id="@+id/personnage_fragment_item_last_location"
                    android:layout_toEndOf="@id/last_location_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentEnd="true"
                    android:textAlignment="textEnd"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="Earth (Replacement Dimension)"
                    android:textColor="#66bb6a"
                    android:textSize="18sp"
                    android:fontFamily="@font/rick_n_morty" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorValidate" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_star_border_white_24dp"
        app:fabSize="mini"/>

</FrameLayout>