<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    tools:context=".locationDetails.LocationDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/location_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:navigationIcon="@drawable/ic_keyboard_arrow_left_accent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:elevation="10dp"/>

    <ImageView
        android:id="@+id/location_details_img_fullsize"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:transitionName="imageLocation"
        app:srcCompat="@drawable/final2"
        android:alpha="0.80">

    </ImageView>

    <TextView
        android:id="@+id/location_details_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-45dp"
        android:padding="5dp"
        android:text="Earth (C-137)"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="22sp"
        android:transitionName="nameLocation"
        android:layout_below="@+id/location_details_img_fullsize"
        android:textAlignment="textStart"
        />

        <androidx.cardview.widget.CardView
            android:id="@+id/locations_details_cardview_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_details_name"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="20dp"
            android:elevation="20dp"
            app:cardBackgroundColor="@color/tabindicatorcolor">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/location_details_type_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/location_details_type_placeholder_text"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/location_details_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:text="Planet"
                    android:textSize="18sp"
                    android:textColor="@color/colorValidate"
                    android:textAlignment="center"
                    android:layout_toEndOf="@id/location_details_type_placeholder"/>

                <TextView
                    android:id="@+id/location_details_dimension_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/location_details_dimension_placeholder_text"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_below="@id/location_details_type_placeholder" />


                <TextView
                    android:id="@+id/location_details_dimension"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/location_details_type"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"
                    android:text="Post-Apocalyptic Dimension"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/colorValidate"
                    android:layout_toEndOf="@id/location_details_dimension_placeholder"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/location_details_description"
            android:layout_below="@id/locations_details_cardview_details"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:padding="16dp"
            android:text="Pas de description disponible."
            android:textAlignment="center"
            android:textColor="@color/colorValidate"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_recyclerview_characters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_details_description"
            android:layout_margin="8dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/colorAccent"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/location_details_separator"
                    android:layout_centerHorizontal="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/location_details_separator_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <androidx.cardview.widget.CardView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/location_details_separator"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/tabindicatorcolor"
                    android:layout_alignParentBottom="true">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/location_details_recyclerview"
                        android:layout_below="@id/location_details_separator"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="7dp"/>

                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
</RelativeLayout>